perf: exhaustive search removes nodes in one pass